// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when creating a new person 1`] = `
<PlatformKeyboardAvoidingView>
  <Connect(BackButton) />
  <Flex
    value={1}
  />
  <Flex
    style={
      Object {
        "alignItems": "center",
      }
    }
    value={2}
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/add_someone.png",
        }
      }
    />
  </Flex>
  <Flex
    style={
      Object {
        "padding": 30,
      }
    }
    value={3}
  >
    <View>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 12,
          }
        }
      >
        First Name or Nickname
      </MyText>
      <Input
        autoFocus={true}
        blurOnSubmit={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name"
        placeholderTextColor="white"
        returnKeyType="next"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "paddingTop": 30,
        }
      }
    >
      <Input
        blurOnSubmit={true}
        onChangeText={[Function]}
        placeholder="Last Name (if you want)"
        placeholderTextColor="white"
        returnKeyType="next"
        value=""
      />
    </View>
  </Flex>
  <Flex
    align="stretch"
    justify="end"
    value={1}
  >
    <Button
      onPress={[Function]}
      text="NEXT"
      type="secondary"
    />
  </Flex>
</PlatformKeyboardAvoidingView>
`;

exports[`renders correctly when editing a person 1`] = `
<PlatformKeyboardAvoidingView>
  <Connect(BackButton) />
  <Flex
    value={1}
  />
  <Flex
    style={
      Object {
        "alignItems": "center",
      }
    }
    value={2}
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 48,
        }
      }
      type="header"
    >
      Edit Person
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "padding": 30,
      }
    }
    value={3}
  >
    <View>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 12,
          }
        }
      >
        First Name or Nickname
      </MyText>
      <Input
        autoFocus={true}
        blurOnSubmit={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name"
        placeholderTextColor="white"
        returnKeyType="next"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "paddingTop": 30,
        }
      }
    >
      <Input
        blurOnSubmit={true}
        onChangeText={[Function]}
        placeholder="Last Name (if you want)"
        placeholderTextColor="white"
        returnKeyType="next"
        value=""
      />
    </View>
  </Flex>
  <Flex
    align="stretch"
    justify="end"
    value={1}
  >
    <Button
      onPress={[Function]}
      text="SAVE"
      type="secondary"
    />
  </Flex>
</PlatformKeyboardAvoidingView>
`;
